Test if prompt for password (token)

--- a/1_Introduction/index.html
+++ b/1_Introduction/index.html
@@ -9,5 +9,6 @@
     <h1>This is to edit the file.</h1>
     <h2>Test for the second token as I push this edition.</h2>
     <h3>This is after second attempt with the second token and succeeded to push.</h3>
+    <h3>This time I am trying if it prompts for password (token).</h3>
 </body>
 </html>
