Last check of GCM

--- a/2_Colr_and_Comment/index.html
+++ b/2_Colr_and_Comment/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="# style.css">
 </head>
 <body>
-    <h1>let us see the diff</h1> 
+    <h1>let us see the diff</h1>
+    <h2>GCM check, if PAT prompts, or succeeded to be remembered by GCM.</h2> 
 <div>
     
 </div> 
